--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -11,7 +12,7 @@
     <div id="container">
          <input type="text" id="input1" placeholder="AGE"><br>
          <input type="text" id="input2" placeholder="SALARY"><br>
-         <button id="btn" onclick="myfunction()">Check Aligibility</button>
+         <button id="btn">Check Aligibility</button>
           <p id="para1" ></p>
         </div>
     <script src="script.js" ></script>
